# IF(WIN32) TODO(avancinirodrigo): It does not work in MSVC
# SET(GUI_TYPE WIN32)
# ENDIF(WIN32)

ADD_EXECUTABLE(qtlua_app ${GUI_TYPE} qtlua.cc )
QT5_USE_MODULES(qtlua_app Widgets Core)

IF(MSVC)
	TARGET_LINK_LIBRARIES(qtlua_app qtlua_static)
ELSE()
	TARGET_LINK_LIBRARIES(qtlua_app qtlua)
ENDIF()
SET_TARGET_PROPERTIES(qtlua_app PROPERTIES OUTPUT_NAME qtlua CLEAN_DIRECT_OUTPUT 1)

INSTALL(TARGETS qtlua_app RUNTIME DESTINATION ${INSTALL_BIN})
